--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@shopify/prettier-config": "^1.1.2",
     "@shopify/stylelint-plugin": "^10.0.1",
     "@tailwindcss/typography": "^0.4.1",
+    "@tsconfig/vite-react": "^1.0.0",
+    "@types/express": "^4.17.13",
+    "@types/node": "^16.11.9",
+    "@types/react": "^17.0.35",
+    "@types/react-dom": "^17.0.11",
     "autoprefixer": "^10.2.5",
     "eslint": "^7.31.0",
     "npm-run-all": "^4.1.5",
