--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/node": "^16.11.9",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.2",
     "autoprefixer": "^10.2.5",
     "eslint": "^7.31.0",
     "npm-run-all": "^4.1.5",
