feat: Migrate components to typescript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@tsconfig/vite-react/tsconfig.json",
   "compilerOptions": {
     "jsx": "react-jsx",
-    "module": "esnext"
+    "module": "esnext",
+    "skipLibCheck": true
   }
 }
