--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@shopify/stylelint-plugin": "^10.0.1",
     "@tailwindcss/typography": "^0.4.1",
     "@tsconfig/vite-react": "^1.0.0",
+    "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/node": "^16.11.9",
     "@types/react": "^17.0.35",
@@ -34,6 +35,8 @@
     "prettier": "^2.3.2",
     "stylelint": "^13.13.0",
     "tailwindcss": "^2.2.4",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.2",
     "vite": "^2.6.14"
   },
   "dependencies": {
